--- a/index.html
+++ b/index.html
@@ -547,6 +547,15 @@ content:"...";
 <p><br /></p>
 <p>该项目仅作为描述自己编码风格的范本。</p>
 <p>因为程序比较简单，没有做过度的程序设计。</p>
+<script src='//git.oschina.net/Mr_ChenLuYong/screenshot/widget_preview'></script>
+<style>
+.pro_name a{color: #4183c4;}
+.osc_git_title{background-color: #fff;}
+.osc_git_box{background-color: #fff;}
+.osc_git_box{border-color: #E3E9ED;}
+.osc_git_info{color: #666;}
+.osc_git_main a{color: #9B9B9B;}
+</style>
 <p><br /></p>
 								</div>
 								</div>
